--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 body{
     background: url(../public/images/portada_background_metro.png) no-repeat center bottom fixed ;
     background-size: cover;
+    font-family: Montserrat, sans-serif;
     
 }
+
